--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imgView"
+        android:id="@+id/imageView1"
         android:src="@drawable/img1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -19,8 +19,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn"
             android:layout_gravity="center_horizontal"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true" />
 
 
 
