--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imgView"
+        android:id="@+id/imageView1"
         android:src="@drawable/img1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
