--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,60 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pro.world_develop.universalpuzzle.GameActivity">
-
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="350dp"
-        android:layout_height="100dp"
-        android:id="@+id/linearLayout"
-        android:weightSum="1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <Button
-
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/btnAr"
-            android:layout_alignTop="@+id/button"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/button2"/>
-        <GridView
-            android:layout_width="124dp"
-            android:layout_height="match_parent"
-            android:id="@+id/gridView"
-            android:layout_weight="0.83" />
-        <Button
-
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/btnArR"
-            android:id="@+id/button"
-            android:layout_alignParentBottom="true"
-            android:layout_alignTop="@+id/linearLayout"
-            android:layout_alignParentRight="true"/>
-
-
-    </LinearLayout>
-
-    <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gridView2"
-        android:layout_above="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-
-</RelativeLayout>
+    tools:context="pro.world_develop.universalpuzzle.GameActivity"
+    android:id="@+id/mainLayout">
+</FrameLayout>
