--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,27 +5,10 @@
     android:layout_height="match_parent"
     tools:context="pro.world_develop.universalpuzzle.MainActivity">
 
-
-
-
-    <ImageView
-        android:id="@+id/imgView"
-        android:src="@drawable/img1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-        <Button
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn"
-            android:layout_gravity="center_horizontal"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-
-
-
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="START"
+        android:onClick="openGameActivity"/>
 
 </RelativeLayout>
-
-
