add work framelayout

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,4 +5,13 @@
     android:layout_height="match_parent"
     tools:context="pro.world_develop.universalpuzzle.GameActivity"
     android:id="@+id/mainLayout">
+
+    <FrameLayout
+        android:layout_marginLeft="30px"
+        android:layout_marginTop="50px"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/panel"
+        android:id="@+id/workLayout"/>
+
 </FrameLayout>
