--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,21 @@
     android:layout_height="match_parent"
     tools:context="pro.world_develop.universalpuzzle.MainActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/main_background"
+        android:scaleType="centerCrop"/>
+
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
         android:text="START"
-        android:onClick="openGameActivity"/>
+        android:onClick="openGameActivity"
+        android:layout_centerInParent="true"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:fontFamily="casual"
+        android:background="@drawable/round_btn"/>
 
 </RelativeLayout>
