fix dist between image

--- a/app/src/main/res/layout/activity_select_image.xml
+++ b/app/src/main/res/layout/activity_select_image.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pro.world_develop.universalpuzzle.SelectImageActivity">
+    tools:context=".activities.SelectImageActivity">
 
     <ImageView
         android:layout_width="match_parent"
@@ -21,10 +21,6 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:scrollIndicators="none">
         </LinearLayout>
     </ScrollView>
