--- a/app/src/main/res/layout/activity_select_params_puzzle.xml
+++ b/app/src/main/res/layout/activity_select_params_puzzle.xml
@@ -12,10 +12,16 @@
         android:scaleType="centerCrop"
         android:alpha="0.2"/>
 
+    <ImageView android:id="@+id/selectImage"
+        android:layout_width="wrap_content"
+        android:layout_height="280dp"
+        android:src="@drawable/test_image2"
+        android:layout_centerHorizontal="true"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView" >
+        android:layout_below="@id/selectImage" >
 
         <LinearLayout
             android:orientation="vertical"
@@ -26,10 +32,6 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:scrollIndicators="none">
-
-            <ImageView android:id="@+id/selectImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
             <SeekBar
                 android:layout_width="match_parent"
@@ -89,7 +91,7 @@
             <Button
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:text="START"
+                android:text="Go!"
                 android:onClick="openGameActivity"
                 android:layout_centerInParent="true"
                 android:textStyle="bold"
