--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,35 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.GameActivity"
-    android:id="@+id/mainLayout">
+    android:orientation="vertical">
 
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/main_background"
-        android:scaleType="centerCrop"
-        android:alpha="0.2"/>
-
-    <TextView android:id="@+id/gameProcess"
-        android:text="0%"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"/>
+        android:orientation="horizontal">
+
+        <TextView android:id="@+id/gameProcess"
+            android:text="0%"
+            android:textSize="30sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"/>
+
+        <SeekBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBarForMainLayout"
+            android:layout_weight="1"
+            android:max="90"
+            android:progress="0"
+            android:paddingTop="10dp"/>
+
+    </LinearLayout>
 
     <FrameLayout
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="100px"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/panel"
-        android:id="@+id/workLayout">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mainLayout"
+        android:background="@android:color/holo_blue_light">
+
+        <FrameLayout
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="100px"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/panel"
+            android:id="@+id/workLayout">
+
+        </FrameLayout>
 
     </FrameLayout>
 
-</FrameLayout>
+</LinearLayout>
+
